added green dot to notification bell & set settings to those previously saved on localStorage

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             </h4>
             <div class='dropdown'>
             <img src='icons/icon-bell.svg' alt='bell icon' class='icon-bell'>
+            <span></span>
                 <ul class='dropdown-content'>
                     <li>Your Krabby Patties are ready!</li>
                     <li>Gary requests a conference call.</li>
